fixed button spacing

--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -2,8 +2,6 @@
   text-align: center;
 }
 
-
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -20,30 +18,14 @@
   color: white;
 }
 
-.App-link {
-  color: white;
-  margin: 0.5em;
-}
-
 .App-buttons {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr)
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
 }
 
-#btn1 {
-  grid-row: 1 / span 1;
-  grid-column: 1 / span 1;
-}
-#btn2 {
-  grid-row: 1 / span 1;
-  grid-column: 2 / span 1;
-}
-#btn3 {
-  grid-row: 2 / span 1;
-  grid-column: 1 / span 1;
-}
-#btn4 {
-  grid-row: 2 / span 1;
-  grid-column: 2 / span 1;
+#btn1, #btn2, #btn3, #btn4 {
+  max-width: 100px;
+  min-width: 100px;
+  margin: 0.5em;
 }
